{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 18,
  "lineage": "ff8730a0-f2c7-3345-29bf-016e429b053a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:route-table/rtb-0c0fee97733eb5f1c",
            "id": "rtb-0c0fee97733eb5f1c",
            "owner_id": "655690556973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1a",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:route-table/rtb-061eda5a1169a192f",
            "id": "rtb-061eda5a1169a192f",
            "owner_id": "655690556973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1b",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:route-table/rtb-0459ddc201de09baa",
            "id": "rtb-0459ddc201de09baa",
            "owner_id": "655690556973",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-public",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d425177e44e00313",
            "route_table_id": "rtb-0c0fee97733eb5f1c",
            "subnet_id": "subnet-03776573bdc6122c9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029d46731eda99bba",
            "route_table_id": "rtb-061eda5a1169a192f",
            "subnet_id": "subnet-0aa238fc922bb19a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037070fee9eda6841",
            "route_table_id": "rtb-0459ddc201de09baa",
            "subnet_id": "subnet-07358d4f46c01c24c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebff19ca68342c61",
            "route_table_id": "rtb-0459ddc201de09baa",
            "subnet_id": "subnet-05ac6eefb1469fcb9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-03776573bdc6122c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.131.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03776573bdc6122c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1a",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-0aa238fc922bb19a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.131.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa238fc922bb19a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-private-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-private-us-east-1b",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-07358d4f46c01c24c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.131.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07358d4f46c01c24c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-public-us-east-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-public-us-east-1a",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:subnet/subnet-05ac6eefb1469fcb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.131.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ac6eefb1469fcb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655690556973",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc-public-us-east-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc-public-us-east-1b",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            },
            "vpc_id": "vpc-014babb4c4b0773b3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:655690556973:vpc/vpc-014babb4c4b0773b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.131.0/24",
            "default_network_acl_id": "acl-0a39977db2ff7eea0",
            "default_route_table_id": "rtb-0045b71c9ffe2905b",
            "default_security_group_id": "sg-0c37fc0e4588116f1",
            "dhcp_options_id": "dopt-2cbd7749",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014babb4c4b0773b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0045b71c9ffe2905b",
            "owner_id": "655690556973",
            "tags": {
              "Environment": "dev",
              "Name": "brian-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Created": "24 Nov 2022",
              "Creator": "Brian Gaber",
              "Environment": "dev",
              "IAC_Tool": "Terraform",
              "Name": "brian-vpc",
              "Owner": "Brian Gaber",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}